// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Application layout examples > Horizontal application layout should render correctly 1`] = `
<div>
  <div
    class="layout layout-example layout-horizontal"
  >
    <div
      class="layout-header"
    >
      <div>
        <a
          class="v-link v-skip-link"
          href="#content"
        >
          Skip to content
        </a>
        <header
          class="v-nav v-nav-horizontal v-justify-content-between"
          id="horizontal-nav"
        >
          <button
            aria-controls="horizontal-nav-mobile-menu"
            aria-expanded="false"
            aria-label="open menu"
            class="v-button v-button-large v-button-tertiary v-button-icon v-dropdown v-desktop-container-hide"
            id="horizontal-nav-mobile-menu-button"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-low v-icon-menu"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M23 23H1V21H23V23ZM23 13H1V11H23V13ZM23 3H1V1H23V3Z"
              />
            </svg>
          </button>
          <a
            aria-label="Visa Application Name Home"
            class="v-link v-link-no-underline v-flex v-gap-16"
            href="./application-layouts"
            id="horizontal-nav-home-link"
            style="background-color: transparent;"
          >
            <svg
              aria-hidden="true"
              class="v-logo"
              height="23"
              viewBox="0 0 71 23"
              width="71"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M50.6986 15.3377C50.7123 11.8369 47.8134 10.3152 45.4937 9.09755C43.9358 8.27981 42.6393 7.59921 42.6617 6.54843C42.6781 5.75329 43.4371 4.90557 45.0931 4.692C47.0325 4.5045 48.9864 4.8451 50.7479 5.67771L51.7566 0.985714C50.0419 0.341244 48.2261 0.00745647 46.3943 0C40.7429 0 36.7376 3.013 36.7014 7.33043C36.6653 10.5143 39.5501 12.3017 41.7286 13.363C43.9629 14.4473 44.7153 15.1439 44.7054 16.1164C44.7054 17.6049 42.9213 18.2587 41.2751 18.285C38.4794 18.3296 36.8224 17.5564 35.5085 16.9434L35.3839 16.8853L34.3357 21.7416C35.6763 22.3593 38.1504 22.8949 40.7166 22.9211C46.7393 22.9211 50.6821 19.9443 50.7019 15.3377H50.6986ZM26.9429 0.404143L17.6541 22.5729H11.592L7.02157 4.88257C6.74229 3.79171 6.50243 3.39414 5.658 2.93414C4.27143 2.18829 2.00429 1.48514 0 1.04814L0.138 0.391H9.89329C11.2059 0.396383 12.3201 1.35458 12.5219 2.65157L14.9369 15.4823L20.9234 0.404143H26.9429ZM70.9714 22.5663H65.6683L64.975 19.2641H57.6183L56.4223 22.5729H50.4029L59.0016 2.03057C59.409 1.04254 60.3741 0.399575 61.4429 0.404143H66.3419L70.9714 22.5663ZM59.2677 14.72L62.2873 6.394L64.0254 14.72H59.2677ZM30.3994 22.5729L35.1571 0.404143H29.4071L24.6626 22.5729H30.3994Z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="v-nav-app-name v-mobile-container-hide"
            >
              <p
                class="v-typography-headline-3 v-xs-container-hide"
              >
                Application name
              </p>
            </div>
          </a>
          <nav
            aria-label="global"
            class="v-mobile-container-hide v-flex v-flex-grow v-justify-content-end v-ml-auto"
          >
            <ul
              class="v-tabs v-tabs-horizontal v-gap-4"
            >
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-large v-button-tertiary"
                  href="./application-layouts"
                >
                  L1 label 1
                </a>
              </li>
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-large v-button-tertiary"
                  href="./application-layouts"
                >
                  L1 label 2
                </a>
              </li>
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-large v-button-tertiary"
                  href="./application-layouts"
                >
                  L1 label 3
                </a>
              </li>
              <li
                class="v-tab"
              >
                <button
                  aria-expanded="false"
                  class="v-button v-button-large v-button-tertiary v-dropdown"
                  id="horizontal-nav-label-dropdown-button"
                >
                  L1 label 4
                  <svg
                    aria-hidden="true"
                    class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      class="v-icon-primary"
                      d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                    />
                  </svg>
                </button>
              </li>
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-large v-button-tertiary"
                  href="./application-layouts"
                >
                  L1 label 5
                </a>
              </li>
            </ul>
          </nav>
          <div
            class="v-flex v-gap-8 v-ml-8"
          >
            <button
              aria-label="search site"
              class="v-button v-button-large v-button-tertiary v-button-icon"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-low v-icon-search"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M24 22.4814L22.4814 24L15 16.5186C15.5551 16.0641 16.0641 15.5551 16.5186 15L24 22.4814ZM9 5C11.2056 5 13 6.79443 13 9H11C11 7.89697 10.103 7 9 7V5Z"
                />
                <path
                  class="v-icon-primary"
                  d="M9 1C13.4111 1 17 4.58887 17 9C17 13.4111 13.4111 17 9 17C4.58887 17 1 13.4111 1 9C1 4.58887 4.58887 1 9 1ZM9 3C5.69141 3 3 5.69141 3 9C3 12.3086 5.69141 15 9 15C12.3086 15 15 12.3086 15 9C15 5.69141 12.3086 3 9 3Z"
                />
              </svg>
            </button>
            <button
              aria-describedby="horizontal-nav-notifications-badge"
              aria-label="notifications"
              class="v-button v-button-large v-button-tertiary v-button-icon v-mobile-container-hide"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-low v-icon-notifications"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M12 0C15.866 0 19 3.13403 19 7V11C19 12.274 19.5082 12.9741 20.084 13.3887C20.7108 13.84 21.4934 14 22 14C22.5523 14 23 14.4477 23 15V17C23 17.5523 22.5523 18 22 18H1V16H21V15.8975C20.3333 15.766 19.5876 15.4952 18.916 15.0117C17.8252 14.2263 17 12.9259 17 11V7C17 4.23858 14.7614 2 12 2C9.23858 2 7 4.23858 7 7V14H5V7C5 3.13401 8.13401 0 12 0ZM12 4C13.6569 4 15 5.34315 15 7V11H13V7C13 6.44772 12.5523 6 12 6V4Z"
                />
                <path
                  class="v-icon-primary"
                  d="M15 21C15 22.6569 13.6569 24 12 24C10.3431 24 9 22.6569 9 21V20H11V21C11 21.5523 11.4477 22 12 22C12.5523 22 13 21.5523 13 21V20H15V21Z"
                />
              </svg>
              <sup
                class="v-badge v-badge-number v-typography-label-active"
                id="horizontal-nav-notifications-badge"
              >
                3
              </sup>
            </button>
            <div
              class="v-tab v-mobile-container-hide"
            >
              <button
                aria-expanded="false"
                aria-label="Alex Miller"
                class="v-avatar v-button v-button-large v-button-tertiary v-dropdown"
              >
                <svg
                  aria-hidden="true"
                  class="v-icon v-icon-visa v-icon-low v-icon-account"
                  focusable="false"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="v-icon-secondary"
                    d="M12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12Z"
                  />
                  <path
                    class="v-icon-primary"
                    d="M12 0C14.7614 0 17 2.23858 17 5C17 7.76142 14.7614 10 12 10C9.23858 10 7 7.76142 7 5C7 2.23858 9.23858 0 12 0ZM12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2Z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="v-icon-primary"
                    d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <nav
          aria-hidden="true"
          aria-label="global menu"
          class="v-nav v-nav-vertical v-desktop-container-hide v-hide"
          id="horizontal-nav-mobile-menu"
        >
          <ul
            class="v-tabs v-tabs-vertical"
          >
            <li
              class="v-tab"
            >
              <a
                class="v-button v-button-large v-button-tertiary"
                href="./application-layouts"
              >
                L1 label 1
              </a>
            </li>
            <li
              class="v-tab"
            >
              <a
                class="v-button v-button-large v-button-tertiary"
                href="./application-layouts"
              >
                L1 label 2
              </a>
            </li>
            <li
              class="v-tab"
            >
              <a
                class="v-button v-button-large v-button-tertiary"
                href="./application-layouts"
              >
                L1 label 3
              </a>
            </li>
            <li
              class="v-tab"
            >
              <button
                aria-controls="undefined"
                aria-expanded="false"
                class="v-button v-button-large v-button-tertiary"
                id="horizontal-nav-mobile-menu-label-dropdown-button"
              >
                L1 label 4
                <svg
                  aria-hidden="true"
                  class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="v-icon-primary"
                    d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                  />
                </svg>
              </button>
            </li>
            <li
              class="v-tab"
            >
              <button
                class="v-button v-button-large v-button-tertiary"
                style="word-break: break-word; block-size: max-content;"
              >
                Notifications
                <sup
                  class="v-badge v-badge-number v-typography-label-active"
                  style="position: relative;"
                >
                  3
                </sup>
              </button>
            </li>
          </ul>
          <hr
            aria-hidden="true"
            class="v-divider v-divider-decorative v-mt-5"
          />
          <div
            class="v-tab v-mt-6 v-tabs-vertical"
          >
            <button
              aria-controls="horizontal-nav-account-sub-menu"
              aria-expanded="false"
              aria-label="Alex Miller"
              class="v-button v-button-large v-button-tertiary"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-low v-icon-account"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12Z"
                />
                <path
                  class="v-icon-primary"
                  d="M12 0C14.7614 0 17 2.23858 17 5C17 7.76142 14.7614 10 12 10C9.23858 10 7 7.76142 7 5C7 2.23858 9.23858 0 12 0ZM12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2Z"
                />
              </svg>
              Alex Miller
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                />
              </svg>
            </button>
          </div>
        </nav>
      </div>
    </div>
    <div
      class="layout-content"
      id="content"
      tabindex="-1"
    >
      <main
        class="layout-main"
      />
      <footer
        class="v-footer v-gap-15"
      >
        <div
          class="v-flex v-mr-1"
        >
          <svg
            aria-label="Visa"
            class="v-logo"
            height="23"
            viewBox="0 0 71 23"
            width="71"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M50.6986 15.3377C50.7123 11.8369 47.8134 10.3152 45.4937 9.09755C43.9358 8.27981 42.6393 7.59921 42.6617 6.54843C42.6781 5.75329 43.4371 4.90557 45.0931 4.692C47.0325 4.5045 48.9864 4.8451 50.7479 5.67771L51.7566 0.985714C50.0419 0.341244 48.2261 0.00745647 46.3943 0C40.7429 0 36.7376 3.013 36.7014 7.33043C36.6653 10.5143 39.5501 12.3017 41.7286 13.363C43.9629 14.4473 44.7153 15.1439 44.7054 16.1164C44.7054 17.6049 42.9213 18.2587 41.2751 18.285C38.4794 18.3296 36.8224 17.5564 35.5085 16.9434L35.3839 16.8853L34.3357 21.7416C35.6763 22.3593 38.1504 22.8949 40.7166 22.9211C46.7393 22.9211 50.6821 19.9443 50.7019 15.3377H50.6986ZM26.9429 0.404143L17.6541 22.5729H11.592L7.02157 4.88257C6.74229 3.79171 6.50243 3.39414 5.658 2.93414C4.27143 2.18829 2.00429 1.48514 0 1.04814L0.138 0.391H9.89329C11.2059 0.396383 12.3201 1.35458 12.5219 2.65157L14.9369 15.4823L20.9234 0.404143H26.9429ZM70.9714 22.5663H65.6683L64.975 19.2641H57.6183L56.4223 22.5729H50.4029L59.0016 2.03057C59.409 1.04254 60.3741 0.399575 61.4429 0.404143H66.3419L70.9714 22.5663ZM59.2677 14.72L62.2873 6.394L64.0254 14.72H59.2677ZM30.3994 22.5729L35.1571 0.404143H29.4071L24.6626 22.5729H30.3994Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="v-flex v-flex-grow v-flex-wrap v-gap-42 v-justify-content-between"
        >
          Copyright © 2026 Visa Inc. All Rights Reserved
          <ul
            class="v-flex v-flex-wrap v-gap-16"
          >
            <li>
              <a
                class="v-link"
                href="./application-layouts"
              >
                Contact us
              </a>
            </li>
            <li>
              <a
                class="v-link"
                href="./application-layouts"
              >
                Privacy
              </a>
            </li>
            <li>
              <a
                class="v-link"
                href="./application-layouts"
              >
                Terms of use
              </a>
            </li>
          </ul>
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`Application layout examples > Mixed application layout should render correctly 1`] = `
<div>
  <div
    class="layout layout-example layout-mixed"
  >
    <div
      class="layout-header"
    >
      <div>
        <a
          class="v-link v-alternate v-skip-link"
          href="#content"
        >
          Skip to content
        </a>
        <header
          class="v-nav v-alternate v-nav-horizontal v-justify-content-between"
          id="alternate-horizontal-nav"
        >
          <button
            aria-controls="alternate-horizontal-nav-mobile-menu"
            aria-expanded="false"
            aria-label="open menu"
            class="v-button v-button-large v-button-tertiary v-button-icon v-dropdown v-desktop-container-hide"
            id="alternate-horizontal-nav-mobile-menu-button"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-low v-icon-menu"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M23 23H1V21H23V23ZM23 13H1V11H23V13ZM23 3H1V1H23V3Z"
              />
            </svg>
          </button>
          <a
            aria-label="Visa Application Name Home"
            class="v-link v-link-no-underline v-flex v-gap-16"
            href="./application-layouts"
            id="alternate-horizontal-nav-home-link"
            style="background-color: transparent;"
          >
            <svg
              aria-hidden="true"
              class="v-logo"
              height="23"
              viewBox="0 0 71 23"
              width="71"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M50.6986 15.3377C50.7123 11.8369 47.8134 10.3152 45.4937 9.09755C43.9358 8.27981 42.6393 7.59921 42.6617 6.54843C42.6781 5.75329 43.4371 4.90557 45.0931 4.692C47.0325 4.5045 48.9864 4.8451 50.7479 5.67771L51.7566 0.985714C50.0419 0.341244 48.2261 0.00745647 46.3943 0C40.7429 0 36.7376 3.013 36.7014 7.33043C36.6653 10.5143 39.5501 12.3017 41.7286 13.363C43.9629 14.4473 44.7153 15.1439 44.7054 16.1164C44.7054 17.6049 42.9213 18.2587 41.2751 18.285C38.4794 18.3296 36.8224 17.5564 35.5085 16.9434L35.3839 16.8853L34.3357 21.7416C35.6763 22.3593 38.1504 22.8949 40.7166 22.9211C46.7393 22.9211 50.6821 19.9443 50.7019 15.3377H50.6986ZM26.9429 0.404143L17.6541 22.5729H11.592L7.02157 4.88257C6.74229 3.79171 6.50243 3.39414 5.658 2.93414C4.27143 2.18829 2.00429 1.48514 0 1.04814L0.138 0.391H9.89329C11.2059 0.396383 12.3201 1.35458 12.5219 2.65157L14.9369 15.4823L20.9234 0.404143H26.9429ZM70.9714 22.5663H65.6683L64.975 19.2641H57.6183L56.4223 22.5729H50.4029L59.0016 2.03057C59.409 1.04254 60.3741 0.399575 61.4429 0.404143H66.3419L70.9714 22.5663ZM59.2677 14.72L62.2873 6.394L64.0254 14.72H59.2677ZM30.3994 22.5729L35.1571 0.404143H29.4071L24.6626 22.5729H30.3994Z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="v-nav-app-name v-mobile-container-hide"
            >
              <p
                class="v-typography-headline-3 v-xs-container-hide"
              >
                Application name
              </p>
            </div>
          </a>
          <nav
            aria-label="global"
            class="v-mobile-container-hide v-flex v-flex-grow v-justify-content-end v-ml-auto"
          >
            <ul
              class="v-tabs v-tabs-horizontal v-gap-4"
            >
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-large v-button-tertiary"
                  href="./application-layouts"
                >
                  L1 label 1
                </a>
              </li>
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-large v-button-tertiary"
                  href="./application-layouts"
                >
                  L1 label 2
                </a>
              </li>
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-large v-button-tertiary"
                  href="./application-layouts"
                >
                  L1 label 3
                </a>
              </li>
              <li
                class="v-tab"
              >
                <button
                  aria-expanded="false"
                  class="v-button v-button-large v-button-tertiary v-dropdown"
                  id="alternate-horizontal-nav-label-dropdown-button"
                >
                  L1 label 4
                  <svg
                    aria-hidden="true"
                    class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      class="v-icon-primary"
                      d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                    />
                  </svg>
                </button>
              </li>
              <li
                class="v-tab"
              >
                <a
                  class="v-button v-button-large v-button-tertiary"
                  href="./application-layouts"
                >
                  L1 label 5
                </a>
              </li>
            </ul>
          </nav>
          <div
            class="v-flex v-gap-8 v-ml-8"
          >
            <button
              aria-label="search site"
              class="v-button v-button-large v-button-tertiary v-button-icon"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-low v-icon-search"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M24 22.4814L22.4814 24L15 16.5186C15.5551 16.0641 16.0641 15.5551 16.5186 15L24 22.4814ZM9 5C11.2056 5 13 6.79443 13 9H11C11 7.89697 10.103 7 9 7V5Z"
                />
                <path
                  class="v-icon-primary"
                  d="M9 1C13.4111 1 17 4.58887 17 9C17 13.4111 13.4111 17 9 17C4.58887 17 1 13.4111 1 9C1 4.58887 4.58887 1 9 1ZM9 3C5.69141 3 3 5.69141 3 9C3 12.3086 5.69141 15 9 15C12.3086 15 15 12.3086 15 9C15 5.69141 12.3086 3 9 3Z"
                />
              </svg>
            </button>
            <button
              aria-describedby="alternate-horizontal-nav-notifications-badge"
              aria-label="notifications"
              class="v-button v-button-large v-button-tertiary v-button-icon v-mobile-container-hide"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-low v-icon-notifications"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M12 0C15.866 0 19 3.13403 19 7V11C19 12.274 19.5082 12.9741 20.084 13.3887C20.7108 13.84 21.4934 14 22 14C22.5523 14 23 14.4477 23 15V17C23 17.5523 22.5523 18 22 18H1V16H21V15.8975C20.3333 15.766 19.5876 15.4952 18.916 15.0117C17.8252 14.2263 17 12.9259 17 11V7C17 4.23858 14.7614 2 12 2C9.23858 2 7 4.23858 7 7V14H5V7C5 3.13401 8.13401 0 12 0ZM12 4C13.6569 4 15 5.34315 15 7V11H13V7C13 6.44772 12.5523 6 12 6V4Z"
                />
                <path
                  class="v-icon-primary"
                  d="M15 21C15 22.6569 13.6569 24 12 24C10.3431 24 9 22.6569 9 21V20H11V21C11 21.5523 11.4477 22 12 22C12.5523 22 13 21.5523 13 21V20H15V21Z"
                />
              </svg>
              <sup
                class="v-badge v-badge-number v-typography-label-active"
                id="alternate-horizontal-nav-notifications-badge"
              >
                3
              </sup>
            </button>
            <div
              class="v-tab v-mobile-container-hide"
            >
              <button
                aria-expanded="false"
                aria-label="Alex Miller"
                class="v-avatar v-button v-button-large v-button-tertiary v-dropdown"
              >
                <svg
                  aria-hidden="true"
                  class="v-icon v-icon-visa v-icon-low v-icon-account"
                  focusable="false"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="v-icon-secondary"
                    d="M12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12Z"
                  />
                  <path
                    class="v-icon-primary"
                    d="M12 0C14.7614 0 17 2.23858 17 5C17 7.76142 14.7614 10 12 10C9.23858 10 7 7.76142 7 5C7 2.23858 9.23858 0 12 0ZM12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2Z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="v-icon-primary"
                    d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <nav
          aria-hidden="true"
          aria-label="global menu"
          class="v-nav v-alternate v-nav-vertical v-desktop-container-hide v-hide"
          id="alternate-horizontal-nav-mobile-menu"
        >
          <ul
            class="v-tabs v-tabs-vertical"
          >
            <li
              class="v-tab"
            >
              <a
                class="v-button v-button-large v-button-tertiary"
                href="./application-layouts"
              >
                L1 label 1
              </a>
            </li>
            <li
              class="v-tab"
            >
              <a
                class="v-button v-button-large v-button-tertiary"
                href="./application-layouts"
              >
                L1 label 2
              </a>
            </li>
            <li
              class="v-tab"
            >
              <a
                class="v-button v-button-large v-button-tertiary"
                href="./application-layouts"
              >
                L1 label 3
              </a>
            </li>
            <li
              class="v-tab"
            >
              <button
                aria-controls="undefined"
                aria-expanded="false"
                class="v-button v-button-large v-button-tertiary"
                id="alternate-horizontal-nav-mobile-menu-label-dropdown-button"
              >
                L1 label 4
                <svg
                  aria-hidden="true"
                  class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="v-icon-primary"
                    d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                  />
                </svg>
              </button>
            </li>
            <li
              class="v-tab"
            >
              <button
                class="v-button v-button-large v-button-tertiary"
                style="word-break: break-word; block-size: max-content;"
              >
                Notifications
                <sup
                  class="v-badge v-badge-number v-typography-label-active"
                  style="position: relative;"
                >
                  3
                </sup>
              </button>
            </li>
          </ul>
          <hr
            aria-hidden="true"
            class="v-divider v-divider-decorative v-mt-5"
          />
          <div
            class="v-tab v-mt-6 v-tabs-vertical"
          >
            <button
              aria-controls="alternate-horizontal-nav-account-sub-menu"
              aria-expanded="false"
              aria-label="Alex Miller"
              class="v-button v-button-large v-button-tertiary"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-low v-icon-account"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12Z"
                />
                <path
                  class="v-icon-primary"
                  d="M12 0C14.7614 0 17 2.23858 17 5C17 7.76142 14.7614 10 12 10C9.23858 10 7 7.76142 7 5C7 2.23858 9.23858 0 12 0ZM12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2Z"
                />
              </svg>
              Alex Miller
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                />
              </svg>
            </button>
          </div>
        </nav>
      </div>
    </div>
    <nav
      aria-label="primary"
      class="v-nav v-nav-vertical layout-vertical-mixed"
      id="vertical-mixed-navigation"
    >
      <div
        class="v-align-self-stretch mixed-vertical-tabs"
      >
        <ul
          class="v-tabs v-tabs-vertical v-gap-8"
        >
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary"
              href="./application-layouts"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-statistics"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M8 0C12.4183 0 16 3.58172 16 8V9H7V0H8ZM9 7H13.917C13.4955 4.4875 11.5125 2.50453 9 2.08301V7Z"
                />
                <path
                  class="v-icon-primary"
                  d="M5 2.79883C3.20445 3.83783 2.00008 5.7769 2 7.99609C2 11.3098 4.68629 13.9961 8 13.9961C10.2193 13.9961 12.1582 12.7917 13.1973 10.9961H15.417C15.2769 11.3423 15.1139 11.6769 14.9287 11.9971C13.547 14.3856 10.9623 15.9961 8 15.9961C3.58172 15.9961 0 12.4144 0 7.99609C8.04098e-05 5.03391 1.61064 2.44912 3.99902 1.06738C4.31914 0.882203 4.65388 0.719215 5 0.579102V2.79883Z"
                />
              </svg>
              L2 label 1
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary"
              href="./application-layouts"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-settings"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M9 8.99609H7V6.99609H9V8.99609Z"
                />
                <path
                  class="v-icon-primary"
                  d="M8 0C8.3619 0 8.71822 0.0237607 9.06738 0.0703125L9.55469 2.07812C9.70857 2.71187 10.3994 3.03398 10.9746 2.77344L11.0879 2.71289L12.8516 1.63867C13.4195 2.07245 13.9275 2.58053 14.3613 3.14844L13.2871 4.91211C12.9252 5.50616 13.2459 6.28118 13.9219 6.44531L15.9297 6.93262C15.9762 7.28178 16 7.63811 16 8C16 8.36189 15.9762 8.71823 15.9297 9.06738L13.9219 9.55469C13.2459 9.71882 12.9252 10.4938 13.2871 11.0879L14.3613 12.8516C13.9275 13.4195 13.4195 13.9275 12.8516 14.3613L11.0879 13.2871C10.4938 12.9252 9.71882 13.2459 9.55469 13.9219L9.06738 15.9297L8.80469 15.96C8.54004 15.9864 8.2716 16 8 16C7.7284 16 7.45996 15.9864 7.19531 15.96L6.93262 15.9297L6.44531 13.9219C6.28118 13.2459 5.50616 12.9252 4.91211 13.2871L3.14844 14.3613C2.65147 13.9817 2.20034 13.5452 1.80469 13.0615L1.63867 12.8516L2.71289 11.0879C3.07483 10.4938 2.75411 9.71882 2.07812 9.55469L0.0703125 9.06738C0.0237615 8.71823 8.6093e-07 8.36189 0 8C0 7.7284 0.0136078 7.45995 0.0400391 7.19531L0.0703125 6.93262L2.07812 6.44531C2.7541 6.28118 3.07481 5.50616 2.71289 4.91211L1.63867 3.14844C2.07245 2.58053 2.58053 2.07245 3.14844 1.63867L4.91211 2.71289C5.46893 3.05214 6.18459 2.79185 6.40723 2.20117L6.44531 2.07812L6.93262 0.0703125C7.28178 0.0237608 7.6381 1.40882e-07 8 0ZM8 5C6.34315 5 5.00001 6.34315 5 8C5 9.65685 6.34315 11 8 11C9.65685 11 11 9.65685 11 8C11 6.34316 9.65685 5 8 5Z"
                />
              </svg>
              L2 label 2
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary"
              href="./application-layouts"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-security"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M8.09766 5.0166C8.38023 5.35764 8.72768 5.62943 9.1123 5.82031C9.66063 6.09235 10.2864 6.2011 10.9121 6.11719C10.9587 6.11116 11 6.14734 11 6.19434V6.45117C11 6.54443 10.9981 6.6378 10.9941 6.73047C10.9738 7.2018 10.9015 7.66501 10.7822 8.1123C10.78 8.12062 10.7776 8.12939 10.7754 8.1377C10.3631 9.65803 9.4015 10.9962 8.04395 11.8701C8.01739 11.8872 7.98261 11.8872 7.95605 11.8701C6.5985 10.9962 5.63687 9.65803 5.22461 8.1377C5.22236 8.12939 5.21999 8.12062 5.21777 8.1123C5.09847 7.66501 5.02623 7.2018 5.00586 6.73047C5.00186 6.6378 5 6.54443 5 6.45117V6.19434C5.00003 6.14734 5.04133 6.11116 5.08789 6.11719C5.71365 6.2011 6.33937 6.09235 6.8877 5.82031C7.27232 5.62943 7.61977 5.35764 7.90234 5.0166L8 4.89844L8.09766 5.0166ZM8 7.49414C7.75154 7.63307 7.49212 7.75105 7.22461 7.84668C7.39472 8.36103 7.6576 8.84078 8 9.26074C8.3424 8.84078 8.60528 8.36103 8.77539 7.84668C8.50788 7.75105 8.24846 7.63308 8 7.49414Z"
                />
                <path
                  class="v-icon-primary"
                  d="M9.75586 1.4491C10.4158 2.24548 11.4397 2.64613 12.4648 2.50867L15 2.16882V6.67078C15 9.73129 13.4446 12.5826 10.8711 14.2391L8.54102 15.7382H7.45898L5.12891 14.2391C2.55543 12.5826 1 9.73129 1 6.67078V2.16882L3.53516 2.50867C4.56027 2.64613 5.5842 2.24548 6.24414 1.4491L7.22949 0.259644H8.77051L9.75586 1.4491ZM7.78418 2.72546C6.68428 4.05269 4.97801 4.7202 3.26953 4.49109L3 4.45496V6.67078C3 9.05117 4.20936 11.2691 6.21094 12.5575L8 13.7089L9.78906 12.5575C11.7906 11.2691 13 9.05116 13 6.67078V4.45496L12.7305 4.49109C11.022 4.7202 9.31572 4.05269 8.21582 2.72546L8 2.46472L7.78418 2.72546Z"
                />
                <defs>
                  <clippath>
                    <rect
                      height="15.9989"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
              L2 label 3
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary"
              href="./application-layouts"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-notes"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M10 12H6V10H10V12ZM10 8H6V6H10V8Z"
                />
                <path
                  class="v-icon-primary"
                  d="M5 2H7V0H9V2H11V0H13V2H14V16H2V6H4V14H12V4H2V2H3V0H5V2Z"
                />
              </svg>
              L2 label 4
            </a>
          </li>
          <li
            class="v-tab"
          >
            <a
              class="v-button v-button-tertiary"
              href="./application-layouts"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-support-ticket"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M10 9.99609H8V5.99609H10V9.99609Z"
                />
                <path
                  class="v-icon-primary"
                  d="M16 1.99609V6.99609H15C14.4477 6.99609 14 7.44381 14 7.99609C14 8.54838 14.4477 8.99609 15 8.99609H16V13.9961H0V8.99609H1C1.55228 8.99609 2 8.54838 2 7.99609C2 7.44381 1.55228 6.99609 1 6.99609H0V1.99609H16ZM2 5.16699C3.16516 5.57885 4 6.6899 4 7.99609C4 9.30229 3.16516 10.4133 2 10.8252V11.9961H14V10.8252C12.8348 10.4133 12 9.30229 12 7.99609C12 6.6899 12.8348 5.57885 14 5.16699V3.99609H2V5.16699Z"
                />
              </svg>
              L2 label 5
            </a>
          </li>
        </ul>
      </div>
      <div
        class="v-align-self-stretch v-flex v-flex-col v-gap-4 v-mt-auto"
      >
        <hr
          aria-hidden="true"
          class="v-divider v-divider-decorative v-mb-4"
        />
        <button
          aria-expanded="true"
          aria-label="Side bar"
          class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle v-ml-auto v-mr-8"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-media-rewind v-icon-rtl"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-secondary"
              d="M7 8L13.6064 15L15 13.5244L9.78613 8L15 2.47559L13.6064 1L7 8Z"
            />
            <path
              class="v-icon-primary"
              d="M1 8L7.60645 15L9 13.5244L3.78613 8L9 2.47559L7.60645 1L1 8Z"
            />
          </svg>
        </button>
      </div>
    </nav>
    <div
      class="layout-content"
      id="content"
      tabindex="-1"
    >
      <main
        class="layout-main"
      />
      <footer
        class="v-footer v-gap-15"
      >
        <div
          class="v-flex v-mr-1"
        >
          <svg
            aria-label="Visa"
            class="v-logo"
            height="23"
            viewBox="0 0 71 23"
            width="71"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M50.6986 15.3377C50.7123 11.8369 47.8134 10.3152 45.4937 9.09755C43.9358 8.27981 42.6393 7.59921 42.6617 6.54843C42.6781 5.75329 43.4371 4.90557 45.0931 4.692C47.0325 4.5045 48.9864 4.8451 50.7479 5.67771L51.7566 0.985714C50.0419 0.341244 48.2261 0.00745647 46.3943 0C40.7429 0 36.7376 3.013 36.7014 7.33043C36.6653 10.5143 39.5501 12.3017 41.7286 13.363C43.9629 14.4473 44.7153 15.1439 44.7054 16.1164C44.7054 17.6049 42.9213 18.2587 41.2751 18.285C38.4794 18.3296 36.8224 17.5564 35.5085 16.9434L35.3839 16.8853L34.3357 21.7416C35.6763 22.3593 38.1504 22.8949 40.7166 22.9211C46.7393 22.9211 50.6821 19.9443 50.7019 15.3377H50.6986ZM26.9429 0.404143L17.6541 22.5729H11.592L7.02157 4.88257C6.74229 3.79171 6.50243 3.39414 5.658 2.93414C4.27143 2.18829 2.00429 1.48514 0 1.04814L0.138 0.391H9.89329C11.2059 0.396383 12.3201 1.35458 12.5219 2.65157L14.9369 15.4823L20.9234 0.404143H26.9429ZM70.9714 22.5663H65.6683L64.975 19.2641H57.6183L56.4223 22.5729H50.4029L59.0016 2.03057C59.409 1.04254 60.3741 0.399575 61.4429 0.404143H66.3419L70.9714 22.5663ZM59.2677 14.72L62.2873 6.394L64.0254 14.72H59.2677ZM30.3994 22.5729L35.1571 0.404143H29.4071L24.6626 22.5729H30.3994Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="v-flex v-flex-grow v-flex-wrap v-gap-42 v-justify-content-between"
        >
          Copyright © 2026 Visa Inc. All Rights Reserved
          <ul
            class="v-flex v-flex-wrap v-gap-16"
          >
            <li>
              <a
                class="v-link"
                href="./application-layouts"
              >
                Contact us
              </a>
            </li>
            <li>
              <a
                class="v-link"
                href="./application-layouts"
              >
                Privacy
              </a>
            </li>
            <li>
              <a
                class="v-link"
                href="./application-layouts"
              >
                Terms of use
              </a>
            </li>
          </ul>
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`Application layout examples > Stacked horizontal application layout should render correctly 1`] = `
<div>
  <div
    class="layout layout-example layout-stacked"
  >
    <div
      class="layout-header"
    >
      <div>
        <a
          class="v-link v-skip-link"
          href="#content"
        >
          Skip to content
        </a>
        <header
          class="v-nav v-nav-horizontal v-justify-content-between"
          id="stacked-horizontal-nav"
        >
          <button
            aria-controls="stacked-horizontal-nav-mobile-menu"
            aria-expanded="false"
            aria-label="open menu"
            class="v-button v-button-large v-button-tertiary v-button-icon v-dropdown v-desktop-container-hide"
            id="stacked-horizontal-nav-mobile-menu-button"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-low v-icon-menu"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M23 23H1V21H23V23ZM23 13H1V11H23V13ZM23 3H1V1H23V3Z"
              />
            </svg>
          </button>
          <a
            aria-label="Visa Application Name Home"
            class="v-link v-link-no-underline v-flex v-gap-16"
            href="./application-layouts"
            id="stacked-horizontal-nav-home-link"
            style="background-color: transparent;"
          >
            <svg
              aria-hidden="true"
              class="v-logo"
              height="23"
              viewBox="0 0 71 23"
              width="71"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M50.6986 15.3377C50.7123 11.8369 47.8134 10.3152 45.4937 9.09755C43.9358 8.27981 42.6393 7.59921 42.6617 6.54843C42.6781 5.75329 43.4371 4.90557 45.0931 4.692C47.0325 4.5045 48.9864 4.8451 50.7479 5.67771L51.7566 0.985714C50.0419 0.341244 48.2261 0.00745647 46.3943 0C40.7429 0 36.7376 3.013 36.7014 7.33043C36.6653 10.5143 39.5501 12.3017 41.7286 13.363C43.9629 14.4473 44.7153 15.1439 44.7054 16.1164C44.7054 17.6049 42.9213 18.2587 41.2751 18.285C38.4794 18.3296 36.8224 17.5564 35.5085 16.9434L35.3839 16.8853L34.3357 21.7416C35.6763 22.3593 38.1504 22.8949 40.7166 22.9211C46.7393 22.9211 50.6821 19.9443 50.7019 15.3377H50.6986ZM26.9429 0.404143L17.6541 22.5729H11.592L7.02157 4.88257C6.74229 3.79171 6.50243 3.39414 5.658 2.93414C4.27143 2.18829 2.00429 1.48514 0 1.04814L0.138 0.391H9.89329C11.2059 0.396383 12.3201 1.35458 12.5219 2.65157L14.9369 15.4823L20.9234 0.404143H26.9429ZM70.9714 22.5663H65.6683L64.975 19.2641H57.6183L56.4223 22.5729H50.4029L59.0016 2.03057C59.409 1.04254 60.3741 0.399575 61.4429 0.404143H66.3419L70.9714 22.5663ZM59.2677 14.72L62.2873 6.394L64.0254 14.72H59.2677ZM30.3994 22.5729L35.1571 0.404143H29.4071L24.6626 22.5729H30.3994Z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="v-nav-app-name v-mobile-container-hide"
            >
              <p
                class="v-typography-headline-3 v-xs-container-hide"
              >
                Application name
              </p>
            </div>
          </a>
          <div
            class="v-flex v-gap-8 v-ml-8"
          >
            <button
              aria-label="search site"
              class="v-button v-button-large v-button-tertiary v-button-icon"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-low v-icon-search"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M24 22.4814L22.4814 24L15 16.5186C15.5551 16.0641 16.0641 15.5551 16.5186 15L24 22.4814ZM9 5C11.2056 5 13 6.79443 13 9H11C11 7.89697 10.103 7 9 7V5Z"
                />
                <path
                  class="v-icon-primary"
                  d="M9 1C13.4111 1 17 4.58887 17 9C17 13.4111 13.4111 17 9 17C4.58887 17 1 13.4111 1 9C1 4.58887 4.58887 1 9 1ZM9 3C5.69141 3 3 5.69141 3 9C3 12.3086 5.69141 15 9 15C12.3086 15 15 12.3086 15 9C15 5.69141 12.3086 3 9 3Z"
                />
              </svg>
            </button>
            <button
              aria-describedby="stacked-horizontal-nav-notifications-badge"
              aria-label="notifications"
              class="v-button v-button-large v-button-tertiary v-button-icon v-mobile-container-hide"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-low v-icon-notifications"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M12 0C15.866 0 19 3.13403 19 7V11C19 12.274 19.5082 12.9741 20.084 13.3887C20.7108 13.84 21.4934 14 22 14C22.5523 14 23 14.4477 23 15V17C23 17.5523 22.5523 18 22 18H1V16H21V15.8975C20.3333 15.766 19.5876 15.4952 18.916 15.0117C17.8252 14.2263 17 12.9259 17 11V7C17 4.23858 14.7614 2 12 2C9.23858 2 7 4.23858 7 7V14H5V7C5 3.13401 8.13401 0 12 0ZM12 4C13.6569 4 15 5.34315 15 7V11H13V7C13 6.44772 12.5523 6 12 6V4Z"
                />
                <path
                  class="v-icon-primary"
                  d="M15 21C15 22.6569 13.6569 24 12 24C10.3431 24 9 22.6569 9 21V20H11V21C11 21.5523 11.4477 22 12 22C12.5523 22 13 21.5523 13 21V20H15V21Z"
                />
              </svg>
              <sup
                class="v-badge v-badge-number v-typography-label-active"
                id="stacked-horizontal-nav-notifications-badge"
              >
                3
              </sup>
            </button>
            <div
              class="v-tab v-mobile-container-hide"
            >
              <button
                aria-expanded="false"
                aria-label="Alex Miller"
                class="v-avatar v-button v-button-large v-button-tertiary v-dropdown"
              >
                <svg
                  aria-hidden="true"
                  class="v-icon v-icon-visa v-icon-low v-icon-account"
                  focusable="false"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="v-icon-secondary"
                    d="M12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12Z"
                  />
                  <path
                    class="v-icon-primary"
                    d="M12 0C14.7614 0 17 2.23858 17 5C17 7.76142 14.7614 10 12 10C9.23858 10 7 7.76142 7 5C7 2.23858 9.23858 0 12 0ZM12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2Z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="v-icon-primary"
                    d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <nav
          aria-hidden="true"
          aria-label="global menu"
          class="v-nav v-nav-vertical v-desktop-container-hide v-hide"
          id="stacked-horizontal-nav-mobile-menu"
        >
          <ul
            class="v-tabs v-tabs-vertical"
          >
            <li
              class="v-tab"
            >
              <a
                class="v-button v-button-large v-button-tertiary"
                href="./application-layouts"
              >
                L1 label 
                1
              </a>
            </li>
            <li
              class="v-tab"
            >
              <a
                class="v-button v-button-large v-button-tertiary"
                href="./application-layouts"
              >
                L1 label 
                2
              </a>
            </li>
            <li
              class="v-tab"
            >
              <a
                class="v-button v-button-large v-button-tertiary"
                href="./application-layouts"
              >
                L1 label 
                3
              </a>
            </li>
            <li
              class="v-tab"
            >
              <button
                class="v-button v-button-large v-button-tertiary"
                style="word-break: break-word; block-size: max-content;"
              >
                Notifications
                <sup
                  class="v-badge v-badge-number v-typography-label-active"
                  style="position: relative;"
                >
                  3
                </sup>
              </button>
            </li>
          </ul>
          <hr
            aria-hidden="true"
            class="v-divider v-divider-decorative v-mt-5"
          />
          <div
            class="v-tab v-mt-6 v-tabs-vertical"
          >
            <button
              aria-controls="stacked-horizontal-nav-account-sub-menu"
              aria-expanded="false"
              aria-label="Alex Miller"
              class="v-button v-button-large v-button-tertiary"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-low v-icon-account"
                focusable="false"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M12 12C17.5228 12 22 16.4772 22 22V24H20V22C20 17.5817 16.4183 14 12 14C7.58172 14 4 17.5817 4 22V24H2V22C2 16.4772 6.47715 12 12 12Z"
                />
                <path
                  class="v-icon-primary"
                  d="M12 0C14.7614 0 17 2.23858 17 5C17 7.76142 14.7614 10 12 10C9.23858 10 7 7.76142 7 5C7 2.23858 9.23858 0 12 0ZM12 2C10.3431 2 9 3.34315 9 5C9 6.65685 10.3431 8 12 8C13.6569 8 15 6.65685 15 5C15 3.34315 13.6569 2 12 2Z"
                />
              </svg>
              Alex Miller
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                />
              </svg>
            </button>
          </div>
        </nav>
        <nav
          aria-label="secondary"
          class="v-nav v-ml-auto v-mobile-container-hide"
          style="--v-surface-background: var(--palette-default-surface-2); --v-tabs-active-line-padding: var(--size-responsive-10);"
        >
          <ul
            class="v-tabs v-tabs-horizontal v-gap-8"
          >
            <li
              class="v-tab"
            >
              <a
                class="v-button v-button-large v-button-tertiary"
                href="./application-layouts"
              >
                L1 label 
                1
              </a>
            </li>
            <li
              class="v-tab"
            >
              <a
                class="v-button v-button-large v-button-tertiary"
                href="./application-layouts"
              >
                L1 label 
                2
              </a>
            </li>
            <li
              class="v-tab"
            >
              <a
                class="v-button v-button-large v-button-tertiary"
                href="./application-layouts"
              >
                L1 label 
                3
              </a>
            </li>
          </ul>
        </nav>
      </div>
    </div>
    <div
      class="layout-content"
      id="content"
      tabindex="-1"
    >
      <main
        class="layout-main"
      />
      <footer
        class="v-footer v-gap-15"
      >
        <div
          class="v-flex v-mr-1"
        >
          <svg
            aria-label="Visa"
            class="v-logo"
            height="23"
            viewBox="0 0 71 23"
            width="71"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M50.6986 15.3377C50.7123 11.8369 47.8134 10.3152 45.4937 9.09755C43.9358 8.27981 42.6393 7.59921 42.6617 6.54843C42.6781 5.75329 43.4371 4.90557 45.0931 4.692C47.0325 4.5045 48.9864 4.8451 50.7479 5.67771L51.7566 0.985714C50.0419 0.341244 48.2261 0.00745647 46.3943 0C40.7429 0 36.7376 3.013 36.7014 7.33043C36.6653 10.5143 39.5501 12.3017 41.7286 13.363C43.9629 14.4473 44.7153 15.1439 44.7054 16.1164C44.7054 17.6049 42.9213 18.2587 41.2751 18.285C38.4794 18.3296 36.8224 17.5564 35.5085 16.9434L35.3839 16.8853L34.3357 21.7416C35.6763 22.3593 38.1504 22.8949 40.7166 22.9211C46.7393 22.9211 50.6821 19.9443 50.7019 15.3377H50.6986ZM26.9429 0.404143L17.6541 22.5729H11.592L7.02157 4.88257C6.74229 3.79171 6.50243 3.39414 5.658 2.93414C4.27143 2.18829 2.00429 1.48514 0 1.04814L0.138 0.391H9.89329C11.2059 0.396383 12.3201 1.35458 12.5219 2.65157L14.9369 15.4823L20.9234 0.404143H26.9429ZM70.9714 22.5663H65.6683L64.975 19.2641H57.6183L56.4223 22.5729H50.4029L59.0016 2.03057C59.409 1.04254 60.3741 0.399575 61.4429 0.404143H66.3419L70.9714 22.5663ZM59.2677 14.72L62.2873 6.394L64.0254 14.72H59.2677ZM30.3994 22.5729L35.1571 0.404143H29.4071L24.6626 22.5729H30.3994Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="v-flex v-flex-grow v-flex-wrap v-gap-42 v-justify-content-between"
        >
          Copyright © 2026 Visa Inc. All Rights Reserved
          <ul
            class="v-flex v-flex-wrap v-gap-16"
          >
            <li>
              <a
                class="v-link"
                href="./application-layouts"
              >
                Contact us
              </a>
            </li>
            <li>
              <a
                class="v-link"
                href="./application-layouts"
              >
                Privacy
              </a>
            </li>
            <li>
              <a
                class="v-link"
                href="./application-layouts"
              >
                Terms of use
              </a>
            </li>
          </ul>
        </div>
      </footer>
    </div>
  </div>
</div>
`;

exports[`Application layout examples > Vertical application layout should render correctly 1`] = `
<div>
  <div
    class="layout layout-example layout-vertical"
  >
    <div
      class="layout-header v-flex v-flex-col v-gap-24"
    >
      <header
        class="v-nav v-nav-vertical"
        id="vertical-no-main-navigation"
      >
        <a
          class="v-link v-skip-link"
          href="#content"
        >
          Skip to content
        </a>
        <a
          aria-label="Visa Application Name Home"
          class="v-link v-link-no-underline v-flex v-flex-col v-gap-12 v-mb-30 v-ml-20 v-mr-16 v-mt-16"
          href="https://www.visa.com"
          id="vertical-no-main-navigation-home-link"
          style="background-color: transparent;"
        >
          <svg
            aria-hidden="true"
            class="v-logo"
            height="23"
            viewBox="0 0 71 23"
            width="71"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M50.6986 15.3377C50.7123 11.8369 47.8134 10.3152 45.4937 9.09755C43.9358 8.27981 42.6393 7.59921 42.6617 6.54843C42.6781 5.75329 43.4371 4.90557 45.0931 4.692C47.0325 4.5045 48.9864 4.8451 50.7479 5.67771L51.7566 0.985714C50.0419 0.341244 48.2261 0.00745647 46.3943 0C40.7429 0 36.7376 3.013 36.7014 7.33043C36.6653 10.5143 39.5501 12.3017 41.7286 13.363C43.9629 14.4473 44.7153 15.1439 44.7054 16.1164C44.7054 17.6049 42.9213 18.2587 41.2751 18.285C38.4794 18.3296 36.8224 17.5564 35.5085 16.9434L35.3839 16.8853L34.3357 21.7416C35.6763 22.3593 38.1504 22.8949 40.7166 22.9211C46.7393 22.9211 50.6821 19.9443 50.7019 15.3377H50.6986ZM26.9429 0.404143L17.6541 22.5729H11.592L7.02157 4.88257C6.74229 3.79171 6.50243 3.39414 5.658 2.93414C4.27143 2.18829 2.00429 1.48514 0 1.04814L0.138 0.391H9.89329C11.2059 0.396383 12.3201 1.35458 12.5219 2.65157L14.9369 15.4823L20.9234 0.404143H26.9429ZM70.9714 22.5663H65.6683L64.975 19.2641H57.6183L56.4223 22.5729H50.4029L59.0016 2.03057C59.409 1.04254 60.3741 0.399575 61.4429 0.404143H66.3419L70.9714 22.5663ZM59.2677 14.72L62.2873 6.394L64.0254 14.72H59.2677ZM30.3994 22.5729L35.1571 0.404143H29.4071L24.6626 22.5729H30.3994Z"
              fill-rule="evenodd"
            />
          </svg>
          <div
            class="v-nav-app-name"
          >
            <p
              class="v-typography-subtitle-1"
            >
              Application name
            </p>
          </div>
        </a>
        <nav
          aria-label="global"
        >
          <ul
            class="v-tabs v-tabs-vertical v-gap-8"
          >
            <li
              class="v-tab"
            >
              <a
                class="v-button v-button-tertiary"
                href="./application-layouts"
              >
                <svg
                  aria-hidden="true"
                  class="v-icon v-icon-visa v-icon-tiny v-icon-statistics"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="v-icon-secondary"
                    d="M8 0C12.4183 0 16 3.58172 16 8V9H7V0H8ZM9 7H13.917C13.4955 4.4875 11.5125 2.50453 9 2.08301V7Z"
                  />
                  <path
                    class="v-icon-primary"
                    d="M5 2.79883C3.20445 3.83783 2.00008 5.7769 2 7.99609C2 11.3098 4.68629 13.9961 8 13.9961C10.2193 13.9961 12.1582 12.7917 13.1973 10.9961H15.417C15.2769 11.3423 15.1139 11.6769 14.9287 11.9971C13.547 14.3856 10.9623 15.9961 8 15.9961C3.58172 15.9961 0 12.4144 0 7.99609C8.04098e-05 5.03391 1.61064 2.44912 3.99902 1.06738C4.31914 0.882203 4.65388 0.719215 5 0.579102V2.79883Z"
                  />
                </svg>
                L1 label 1
              </a>
            </li>
            <li
              class="v-tab"
            >
              <a
                class="v-button v-button-tertiary"
                href="./application-layouts"
              >
                <svg
                  aria-hidden="true"
                  class="v-icon v-icon-visa v-icon-tiny v-icon-settings"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="v-icon-secondary"
                    d="M9 8.99609H7V6.99609H9V8.99609Z"
                  />
                  <path
                    class="v-icon-primary"
                    d="M8 0C8.3619 0 8.71822 0.0237607 9.06738 0.0703125L9.55469 2.07812C9.70857 2.71187 10.3994 3.03398 10.9746 2.77344L11.0879 2.71289L12.8516 1.63867C13.4195 2.07245 13.9275 2.58053 14.3613 3.14844L13.2871 4.91211C12.9252 5.50616 13.2459 6.28118 13.9219 6.44531L15.9297 6.93262C15.9762 7.28178 16 7.63811 16 8C16 8.36189 15.9762 8.71823 15.9297 9.06738L13.9219 9.55469C13.2459 9.71882 12.9252 10.4938 13.2871 11.0879L14.3613 12.8516C13.9275 13.4195 13.4195 13.9275 12.8516 14.3613L11.0879 13.2871C10.4938 12.9252 9.71882 13.2459 9.55469 13.9219L9.06738 15.9297L8.80469 15.96C8.54004 15.9864 8.2716 16 8 16C7.7284 16 7.45996 15.9864 7.19531 15.96L6.93262 15.9297L6.44531 13.9219C6.28118 13.2459 5.50616 12.9252 4.91211 13.2871L3.14844 14.3613C2.65147 13.9817 2.20034 13.5452 1.80469 13.0615L1.63867 12.8516L2.71289 11.0879C3.07483 10.4938 2.75411 9.71882 2.07812 9.55469L0.0703125 9.06738C0.0237615 8.71823 8.6093e-07 8.36189 0 8C0 7.7284 0.0136078 7.45995 0.0400391 7.19531L0.0703125 6.93262L2.07812 6.44531C2.7541 6.28118 3.07481 5.50616 2.71289 4.91211L1.63867 3.14844C2.07245 2.58053 2.58053 2.07245 3.14844 1.63867L4.91211 2.71289C5.46893 3.05214 6.18459 2.79185 6.40723 2.20117L6.44531 2.07812L6.93262 0.0703125C7.28178 0.0237608 7.6381 1.40882e-07 8 0ZM8 5C6.34315 5 5.00001 6.34315 5 8C5 9.65685 6.34315 11 8 11C9.65685 11 11 9.65685 11 8C11 6.34316 9.65685 5 8 5Z"
                  />
                </svg>
                L1 label 2
              </a>
            </li>
            <li
              class="v-tab"
            >
              <a
                class="v-button v-button-tertiary"
                href="./application-layouts"
              >
                <svg
                  aria-hidden="true"
                  class="v-icon v-icon-visa v-icon-tiny v-icon-security"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="v-icon-secondary"
                    d="M8.09766 5.0166C8.38023 5.35764 8.72768 5.62943 9.1123 5.82031C9.66063 6.09235 10.2864 6.2011 10.9121 6.11719C10.9587 6.11116 11 6.14734 11 6.19434V6.45117C11 6.54443 10.9981 6.6378 10.9941 6.73047C10.9738 7.2018 10.9015 7.66501 10.7822 8.1123C10.78 8.12062 10.7776 8.12939 10.7754 8.1377C10.3631 9.65803 9.4015 10.9962 8.04395 11.8701C8.01739 11.8872 7.98261 11.8872 7.95605 11.8701C6.5985 10.9962 5.63687 9.65803 5.22461 8.1377C5.22236 8.12939 5.21999 8.12062 5.21777 8.1123C5.09847 7.66501 5.02623 7.2018 5.00586 6.73047C5.00186 6.6378 5 6.54443 5 6.45117V6.19434C5.00003 6.14734 5.04133 6.11116 5.08789 6.11719C5.71365 6.2011 6.33937 6.09235 6.8877 5.82031C7.27232 5.62943 7.61977 5.35764 7.90234 5.0166L8 4.89844L8.09766 5.0166ZM8 7.49414C7.75154 7.63307 7.49212 7.75105 7.22461 7.84668C7.39472 8.36103 7.6576 8.84078 8 9.26074C8.3424 8.84078 8.60528 8.36103 8.77539 7.84668C8.50788 7.75105 8.24846 7.63308 8 7.49414Z"
                  />
                  <path
                    class="v-icon-primary"
                    d="M9.75586 1.4491C10.4158 2.24548 11.4397 2.64613 12.4648 2.50867L15 2.16882V6.67078C15 9.73129 13.4446 12.5826 10.8711 14.2391L8.54102 15.7382H7.45898L5.12891 14.2391C2.55543 12.5826 1 9.73129 1 6.67078V2.16882L3.53516 2.50867C4.56027 2.64613 5.5842 2.24548 6.24414 1.4491L7.22949 0.259644H8.77051L9.75586 1.4491ZM7.78418 2.72546C6.68428 4.05269 4.97801 4.7202 3.26953 4.49109L3 4.45496V6.67078C3 9.05117 4.20936 11.2691 6.21094 12.5575L8 13.7089L9.78906 12.5575C11.7906 11.2691 13 9.05116 13 6.67078V4.45496L12.7305 4.49109C11.022 4.7202 9.31572 4.05269 8.21582 2.72546L8 2.46472L7.78418 2.72546Z"
                  />
                  <defs>
                    <clippath>
                      <rect
                        height="15.9989"
                        width="16"
                      />
                    </clippath>
                  </defs>
                </svg>
                L1 label 3
              </a>
            </li>
            <li
              class="v-tab"
            >
              <a
                class="v-button v-button-tertiary"
                href="./application-layouts"
              >
                <svg
                  aria-hidden="true"
                  class="v-icon v-icon-visa v-icon-tiny v-icon-notes"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="v-icon-secondary"
                    d="M10 12H6V10H10V12ZM10 8H6V6H10V8Z"
                  />
                  <path
                    class="v-icon-primary"
                    d="M5 2H7V0H9V2H11V0H13V2H14V16H2V6H4V14H12V4H2V2H3V0H5V2Z"
                  />
                </svg>
                L1 label 4
              </a>
            </li>
            <li
              class="v-tab"
            >
              <a
                class="v-button v-button-tertiary"
                href="./application-layouts"
              >
                <svg
                  aria-hidden="true"
                  class="v-icon v-icon-visa v-icon-tiny v-icon-support-ticket"
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="v-icon-secondary"
                    d="M10 9.99609H8V5.99609H10V9.99609Z"
                  />
                  <path
                    class="v-icon-primary"
                    d="M16 1.99609V6.99609H15C14.4477 6.99609 14 7.44381 14 7.99609C14 8.54838 14.4477 8.99609 15 8.99609H16V13.9961H0V8.99609H1C1.55228 8.99609 2 8.54838 2 7.99609C2 7.44381 1.55228 6.99609 1 6.99609H0V1.99609H16ZM2 5.16699C3.16516 5.57885 4 6.6899 4 7.99609C4 9.30229 3.16516 10.4133 2 10.8252V11.9961H14V10.8252C12.8348 10.4133 12 9.30229 12 7.99609C12 6.6899 12.8348 5.57885 14 5.16699V3.99609H2V5.16699Z"
                  />
                </svg>
                L1 label 5
              </a>
            </li>
          </ul>
        </nav>
        <div
          class="v-align-self-stretch v-flex v-flex-col v-gap-4 v-mt-auto"
        >
          <hr
            aria-hidden="true"
            class="v-divider v-divider-decorative"
          />
          <div
            class="v-tab"
          >
            <button
              aria-controls="vertical-no-main-navigation-account-sub-menu"
              aria-expanded="false"
              aria-label="Alex Miller"
              class="v-button v-button-large v-button-tertiary"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-account"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-secondary"
                  d="M8 9C11.866 9 15 12.134 15 16H13C13 13.2386 10.7614 11 8 11C5.23858 11 3 13.2386 3 16H1C1 12.134 4.13401 9 8 9Z"
                />
                <path
                  class="v-icon-primary"
                  d="M8 0C10.2091 0 12 1.79086 12 4C12 6.20914 10.2091 8 8 8C5.79086 8 4 6.20914 4 4C4 1.79086 5.79086 0 8 0ZM8 2C6.89543 2 6 2.89543 6 4C6 5.10457 6.89543 6 8 6C9.10457 6 10 5.10457 10 4C10 2.89543 9.10457 2 8 2Z"
                />
              </svg>
              Alex Miller
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-tab-suffix"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
                />
              </svg>
            </button>
            <ul
              aria-hidden="true"
              class="v-tabs v-tabs-vertical v-hide"
              id="vertical-no-main-navigation-account-sub-menu"
            >
              <li
                class="v-tab"
                id="vertical-no-main-navigation-account-sub-item-0"
              >
                <a
                  class="v-button v-button-tertiary"
                  href="./application-layouts"
                >
                  Account item 1
                </a>
              </li>
              <li
                class="v-tab"
                id="vertical-no-main-navigation-account-sub-item-1"
              >
                <a
                  class="v-button v-button-tertiary"
                  href="./application-layouts"
                >
                  Account item 2
                </a>
              </li>
            </ul>
          </div>
          <button
            aria-expanded="true"
            aria-label="Side bar"
            class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle v-ml-auto v-mr-8"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-media-rewind v-icon-rtl"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-secondary"
                d="M7 8L13.6064 15L15 13.5244L9.78613 8L15 2.47559L13.6064 1L7 8Z"
              />
              <path
                class="v-icon-primary"
                d="M1 8L7.60645 15L9 13.5244L3.78613 8L9 2.47559L7.60645 1L1 8Z"
              />
            </svg>
          </button>
        </div>
      </header>
    </div>
    <div
      class="layout-content"
      id="content"
      tabindex="-1"
    >
      <main
        class="layout-main"
      />
      <footer
        class="v-footer v-gap-15"
      >
        <div
          class="v-flex v-mr-1"
        >
          <svg
            aria-label="Visa"
            class="v-logo"
            height="23"
            viewBox="0 0 71 23"
            width="71"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M50.6986 15.3377C50.7123 11.8369 47.8134 10.3152 45.4937 9.09755C43.9358 8.27981 42.6393 7.59921 42.6617 6.54843C42.6781 5.75329 43.4371 4.90557 45.0931 4.692C47.0325 4.5045 48.9864 4.8451 50.7479 5.67771L51.7566 0.985714C50.0419 0.341244 48.2261 0.00745647 46.3943 0C40.7429 0 36.7376 3.013 36.7014 7.33043C36.6653 10.5143 39.5501 12.3017 41.7286 13.363C43.9629 14.4473 44.7153 15.1439 44.7054 16.1164C44.7054 17.6049 42.9213 18.2587 41.2751 18.285C38.4794 18.3296 36.8224 17.5564 35.5085 16.9434L35.3839 16.8853L34.3357 21.7416C35.6763 22.3593 38.1504 22.8949 40.7166 22.9211C46.7393 22.9211 50.6821 19.9443 50.7019 15.3377H50.6986ZM26.9429 0.404143L17.6541 22.5729H11.592L7.02157 4.88257C6.74229 3.79171 6.50243 3.39414 5.658 2.93414C4.27143 2.18829 2.00429 1.48514 0 1.04814L0.138 0.391H9.89329C11.2059 0.396383 12.3201 1.35458 12.5219 2.65157L14.9369 15.4823L20.9234 0.404143H26.9429ZM70.9714 22.5663H65.6683L64.975 19.2641H57.6183L56.4223 22.5729H50.4029L59.0016 2.03057C59.409 1.04254 60.3741 0.399575 61.4429 0.404143H66.3419L70.9714 22.5663ZM59.2677 14.72L62.2873 6.394L64.0254 14.72H59.2677ZM30.3994 22.5729L35.1571 0.404143H29.4071L24.6626 22.5729H30.3994Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="v-flex v-flex-grow v-flex-wrap v-gap-42 v-justify-content-between"
        >
          Copyright © 2026 Visa Inc. All Rights Reserved
          <ul
            class="v-flex v-flex-wrap v-gap-16"
          >
            <li>
              <a
                class="v-link"
                href="./application-layouts"
              >
                Contact us
              </a>
            </li>
            <li>
              <a
                class="v-link"
                href="./application-layouts"
              >
                Privacy
              </a>
            </li>
            <li>
              <a
                class="v-link"
                href="./application-layouts"
              >
                Terms of use
              </a>
            </li>
          </ul>
        </div>
      </footer>
    </div>
  </div>
</div>
`;
